--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-dash==2.14.2
-plotly==5.24.1
-pandas==2.2.3
+dash==2.18.2
 dash-bootstrap-components==1.6.0
+pandas==2.2.3
+plotly==5.24.1
+numpy==2.2.1
+psutil==6.1.1
 colorama==0.4.6
-
+gunicorn==23.0.0
