refactor: update layout components and styling structure

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,4 @@ outputs/
 .DS_Store
 constants/mappings/insurance_lines_162_rev-or.json
 constants/mappings/modified_insurance.json
+**/repomix-output.txt
