--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 dash==2.18.2
 dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 pandas==2.2.3
 plotly==5.24.1
 numpy==2.2.1
